add water view, add bottom bar
